[workspace]
members = [
    "codegen",
    "macro",
]

[package]
name = "obce"
version = "0.1.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2021"

license = "MIT"
repository = "TODO:"
documentation = "TODO:"
homepage = "https://supercolony.net"
description = "OpenBursh chain extension(OBCE) - util to simplify chain extension development."
keywords = ["wasm", "supercolony", "smart-contracts", "blockchain", "chain-extension"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
# Common deps
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
obce-macro = { path = "macro", default-features = false }

# Substrate deps
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }

# Ink deps
ink_primitives = { version = "3", default-features = false, optional = true }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false, optional = true }
ink_storage = { version = "3", default-features = false, optional = true }
ink_lang = { version = "3", default-features = false, optional = true }
ink_prelude = { version = "3", default-features = false, optional = true }
ink_engine = { version = "3", default-features = false, optional = true }

[features]
default = ["std"]
substrate = [
    "pallet-contracts",
    "frame-system",
    "frame-support",
    "sp-core",
    "sp-runtime",
    "sp-std",
]
ink = [
    "ink_primitives",
    "ink_env",
    "ink_storage",
    "ink_lang",
    "ink_prelude",
]
std = [
    "scale-info/std",
    "scale/std",
]
substrate-std = [
    "std",
    "substrate",
    "pallet-contracts/std",
    "frame-system/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
ink-std = [
    "std",
    "ink",
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_prelude/std",
    "ink_engine/std",
]