[workspace]
members = [
    "codegen",
    "macro",
]

[package]
name = "obce"
version = "0.1.0"
authors = ["727.Ventures <green.baneling@727.ventures>"]
edition = "2021"

license = "MIT"
repository = "TODO:"
documentation = "TODO:"
homepage = "https://727.ventures"
description = "OpenBursh chain extension(OBCE) - util to simplify chain extension development."
keywords = ["wasm", "727.ventures", "smart-contracts", "blockchain", "chain-extension"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
# Common deps
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }
obce-macro = { path = "macro", default-features = false }

# Substrate deps
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }

# Ink deps
ink_lang = { package = "ink", version = "4.0.0-beta", default-features = false, optional = true }
ink_engine = { version = "4.0.0-beta", default-features = false, optional = true }

[features]
default = ["std"]
substrate = [
    "pallet-contracts",
    "frame-system",
    "frame-support",
    "sp-core",
    "sp-runtime",
    "sp-std",
]
ink = [
    "ink_lang",
]
std = [
    "scale-info/std",
    "scale/std",
]
substrate-std = [
    "std",
    "substrate",
    "pallet-contracts/std",
    "frame-system/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
ink-std = [
    "std",
    "ink",
    "ink_lang/std",
    "ink_engine/std"
]
runtime-benchmarks = [
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]