[package]
name = "obce-codegen"
version = "0.1.0"
authors = ["727.Ventures <green.baneling@727.ventures>"]
edition = "2021"

license = "MIT"
repository = "TODO:"
documentation = "TODO:"
homepage = "https://727.ventures"
description = "TODO:"
keywords = ["wasm", "727.ventures", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
syn = { version = "1", features = ["parsing", "full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
blake2 = "0.10"

[lib]
name = "obce_codegen"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = []