[package]
name = "obce-macro"
version = "0.1.0"
authors = ["727.Ventures <green.baneling@727.ventures>"]
edition = "2021"

license = "MIT"
repository = "TODO:"
documentation = "TODO:"
homepage = "https://727.ventures"
description = "TODO:"
keywords = ["wasm", "727.ventures", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
obce-codegen = { version = "~0.1.0", path = "../codegen", default-features = false }
syn = "1"
proc-macro2 = "1"
synstructure = "0.12"

[dev-dependencies]

[lib]
name = "obce_macro"
path = "src/lib.rs"
proc-macro = true

[features]
default = ["std"]
std = []